--- a/style.css
+++ b/style.css
@@ -5,3 +5,106 @@
     padding: 0;
     font-family: work sans;
 }
+
+.btn {
+    border-radius: 8px;
+    border: none;
+    background: rgb(255, 144, 14);
+    color: rgb(255, 255, 255);
+    font-family: Work Sans;
+    font-size: 1.25em;
+    font-weight: 600;
+    line-height: 23px;
+    padding: 20px 25px;
+    margin-bottom: 50px;
+}
+
+.btn-container {
+    text-align: center;
+}
+
+/* navbar */
+header {
+    background: rgba(255, 144, 14, 0.1);
+    padding: 50px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1440px;
+    margin: 0 auto 100px;
+    text-align: center;
+}
+
+nav>a {
+    color: rgb(19, 19, 19);
+    font-family: Work Sans;
+    font-size: 3em;
+    font-weight: 700;
+    line-height: 40px;
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+nav ul {
+    display: flex;
+    gap: 30px;
+    list-style: none;
+}
+
+nav ul a {
+    text-decoration: none;
+    color: rgb(66, 66, 66);
+    font-family: Work Sans;
+    font-size: 1.2em;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+/* hero section */
+
+.hero {
+    max-width: 1440px;
+    margin: 0 auto 50px;
+}
+
+.hero-content{
+    max-width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+.hero-content h2 {
+    color: rgb(19, 19, 19);
+    font-family: Work Sans;
+    font-size: 4em;
+    font-weight: 700;
+    line-height: 75px;
+
+    margin-bottom: 30px;
+}
+
+.hero-content p {
+    color: rgb(114, 114, 114);
+    font-family: Work Sans;
+    font-size: 1em;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+
+    margin-bottom: 30px;
+}
+
+.hero img {
+    width: 100%;
+}
+
+/* responsive header */
+
+@media screen and (max-width:576px) {
+    nav {
+        flex-direction: column;
+        column-gap: 20px;
+    }
+}
